# life-dashboard

./: .gitignore  food_quality_backfill.md  package-lock.json  package.json
apps/dashboard/: .gitignore  FUTURE_IDEAS.md  README.md  middleware.ts  package.json
apps/dashboard/app/: globals.css  layout.tsx  page.tsx  pwa.tsx
apps/dashboard/app/apps/[slug]/: page.tsx
apps/dashboard/app/apps/tratament-cervical-2026/: README.md  page.tsx
apps/dashboard/app/devices/: page.tsx
apps/dashboard/app/login/: page.tsx
apps/dashboard/app/receipts/: page.tsx
apps/dashboard/app/termo/: page.tsx
apps/dashboard/components/: AppCard.tsx  AppCards.tsx  Card.tsx  ClockCard.tsx  DevicesCard.tsx  LogoutButton.tsx  StatusPill.tsx  WeatherCard.tsx
apps/dashboard/lib/: supabaseBrowser.ts  supabaseClient.ts  supabaseServer.ts
apps/dashboard/public/: manifest.json  sw.js
apps/receipts-desktop/: README.md  index.html  package.json  vite.config.ts
apps/receipts-desktop/config/: stores.json
apps/receipts-desktop/scripts/: install.receipts.operator  uninstall.receipts.operator  update.receipts.operator
apps/receipts-desktop/src/: App.tsx  styles.css
apps/receipts-desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/receipts-desktop/src-tauri/src/: main.rs
apps/receipts-worker/: .env.example  README.md  requirements.txt  run.sh
apps/receipts-worker/src/: core.py  ingest.py  lidl_receipt_ocr.py  registry.py  runner.py  storage.py
scripts/: README.md  device_heartbeat.mjs  device_heartbeat.ps1  device_heartbeat_hidden.vbs  termo_alert.mjs
(+6 files in other folders)
