[package]
name = "receipts-desktop"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "1", features = [ "shell-open", "fs-all"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
